Bug 341599 - crash on loading account kded plugin
Summary: crash on loading account kded plugin
Status: RESOLVED FIXED
Alias: None
Product: telepathy
Classification: Unmaintained
Component: kded-module (other bugs)
Version First Reported In: git-latest
Platform: Gentoo Packages Linux
: NOR grave
Target Milestone: Future
Assignee: Telepathy Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-12-06 14:47 UTC by kde
Modified: 2014-12-09 10:03 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description kde 2014-12-06 14:47:07 UTC
This doesn't only happens when I do something ktp, but anything ktp related. Especially on login I get around 30 or more crashes from kded5 resulting in plasma5 not to startup entirely.

sadly there is something wrong withing the static initialization of the shared library file, so the backtrace doesn't show much information:

Application: kded5 (kded5), signal: Segmentation fault
Using host libthread_db library "/lib64/libthread_db.so.1".
81	T_PSEUDO (SYSCALL_SYMBOL, SYSCALL_NAME, SYSCALL_NARGS)
[Current thread is 1 (Thread 0x7f8602ea0780 (LWP 3399))]

Thread 2 (Thread 0x7f8601449700 (LWP 3400)):
#0  0x00007f8602a1acdd in poll () at ../sysdeps/unix/syscall-template.S:81
#1  0x00000030dca0aa22 in ?? () from /usr/lib64/libxcb.so.1
#2  0x00000030dca0c959 in xcb_wait_for_event () from /usr/lib64/libxcb.so.1
#3  0x00007f8602e1e2a9 in ?? () from /usr/lib64/qt5/plugins/platforms/libqxcb.so
#4  0x0000003ddbad29f0 in ?? () from /usr/lib64/libQt5Core.so.5
#5  0x00007f86027272d4 in start_thread (arg=0x7f8601449700) at pthread_create.c:310
#6  0x00007f8602a23c0d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 1 (Thread 0x7f8602ea0780 (LWP 3399)):
[KCrash Handler]
#5  0x0000000000000000 in ?? ()
#6  0x0000003679673112 in ?? () from /usr/lib/gcc/x86_64-pc-linux-gnu/4.9.2/libasan.so.1
#7  0x0000003679673490 in ?? () from /usr/lib/gcc/x86_64-pc-linux-gnu/4.9.2/libasan.so.1
#8  0x0000003679678f1a in __asan_init_v3 () from /usr/lib/gcc/x86_64-pc-linux-gnu/4.9.2/libasan.so.1
#9  0x00007f85fb36c837 in ?? () from /usr/lib64/libKF5AkonadiPrivate.so.5
#10 0x00007f8602cea19a in call_init (l=<optimized out>, argc=argc@entry=1, argv=argv@entry=0x7ffffdc2eae8, env=env@entry=0x24dcec0) at dl-init.c:78
#11 0x00007f8602cea2ab in call_init (env=0x24dcec0, argv=0x7ffffdc2eae8, argc=1, l=<optimized out>) at dl-init.c:36
#12 _dl_init (main_map=main_map@entry=0x257e580, argc=1, argv=0x7ffffdc2eae8, env=0x24dcec0) at dl-init.c:126
#13 0x00007f8602cee7a7 in dl_open_worker (a=a@entry=0x7ffffdc2dfc8) at dl-open.c:566
#14 0x00007f8602cea044 in _dl_catch_error (objname=objname@entry=0x7ffffdc2dfb8, errstring=errstring@entry=0x7ffffdc2dfc0, mallocedp=mallocedp@entry=0x7ffffdc2dfb7, operate=operate@entry=0x7f8602cee3d0 <dl_open_worker>, args=args@entry=0x7ffffdc2dfc8) at dl-error.c:187
#15 0x00007f8602cede53 in _dl_open (file=0x2580de8 "/usr/lib64/qt5/plugins/kded_accounts.so", mode=-2147483647, caller_dlopen=0x3ddbc61f23, nsid=-2, argc=<optimized out>, argv=<optimized out>, env=0x24dcec0) at dl-open.c:650
#16 0x00007f8602222049 in dlopen_doit (a=a@entry=0x7ffffdc2e1e0) at dlopen.c:66
#17 0x00007f8602cea044 in _dl_catch_error (objname=0x24deff0, errstring=0x24deff8, mallocedp=0x24defe8, operate=0x7f8602221ff0 <dlopen_doit>, args=0x7ffffdc2e1e0) at dl-error.c:187
#18 0x00007f86022225f9 in _dlerror_run (operate=operate@entry=0x7f8602221ff0 <dlopen_doit>, args=args@entry=0x7ffffdc2e1e0) at dlerror.c:163
#19 0x00007f86022220e1 in __dlopen (file=<optimized out>, mode=<optimized out>) at dlopen.c:87
#20 0x0000003ddbc61f23 in ?? () from /usr/lib64/libQt5Core.so.5
#21 0x0000003ddbc6637d in ?? () from /usr/lib64/libQt5Core.so.5
#22 0x0000003ddd644827 in KPluginLoader::load (this=0x7ffffdc2e600) at /usr/src/debug/kde-frameworks/kcoreaddons-5.4.0/kcoreaddons-5.4.0/src/lib/plugin/kpluginloader.cpp:183
#23 0x0000003ddd644457 in KPluginLoader::factory (this=0x7ffffdc2e600) at /usr/src/debug/kde-frameworks/kcoreaddons-5.4.0/kcoreaddons-5.4.0/src/lib/plugin/kpluginloader.cpp:106
#24 0x000000356b408f17 in ?? () from /usr/lib64/libkdeinit5_kded5.so
#25 0x000000356b40a479 in ?? () from /usr/lib64/libkdeinit5_kded5.so
#26 0x000000356b40af90 in ?? () from /usr/lib64/libkdeinit5_kded5.so
#27 0x000000356b40cea1 in kdemain () from /usr/lib64/libkdeinit5_kded5.so
#28 0x00007f860295b050 in __libc_start_main (main=0x4007a0 <main>, argc=1, argv=0x7ffffdc2eae8, init=<optimized out>, fini=<optimized out>, rtld_fini=<optimized out>, stack_end=0x7ffffdc2ead8) at libc-start.c:289
#29 0x00000000004007ce in _start ()


After removing "/usr/lib64/qt5/plugins/kded_accounts.so" everything seems to work again.

Reproducible: Always

Steps to Reproduce:
1. install
2. do kded involving activities (right-click, open systemsettings, ...)

Actual Results:  
crash

Expected Results:  
no crash
Comment 1 demm 2014-12-07 00:20:25 UTC
Confirmed here with Qt 5.4rc, all the latest git checkouts of the whole ktp group, all build on frameworks 5.5.0.
Plasma 5 starts fine, contact-list works, if compiled without kaccounts-integration (ofc, not much use that way), same behavior as described above, when kaccounts-integration is added.
Comment 2 kde 2014-12-07 09:34:20 UTC
one positive thing is, that as long as all your accounts are already added, you don't need kaccounts-integrations for telepathy anymore, but having all these crashes and hangs only because of installing is really bad.
Comment 3 kde 2014-12-07 09:35:54 UTC
on a side note: I use KF 5.4.0
Comment 4 Martin Klapetek 2014-12-08 10:11:13 UTC
It crashes because of some akonadi stuff, see the first 4 lines of the Thread 1 backtrace. I'm going to make the akonadi plugin optional for now, but ultimately this crash comes from your akonadi setup, sorry.
Comment 5 Martin Klapetek 2014-12-08 10:12:18 UTC
Also, try to install akonadi debug packages and see what the backtrace will show then, it will be easier for akonadi folks to fix it.
Comment 6 Martin Klapetek 2014-12-08 17:21:00 UTC
Git commit 72fcb217e0da8eddb0c0fbcb66c805e8bbbb3e9c by Martin Klapetek.
Committed on 08/12/2014 at 17:20.
Pushed by mklapetek into branch 'master'.

Build the Akonadi plugin as a standalone plugin and make it optional

M  +1    -4    CMakeLists.txt
M  +30   -12   src/daemon/CMakeLists.txt
M  +2    -0    src/daemon/akonadi/akonadiservices.h
M  +1    -2    src/daemon/daemon.cpp

http://commits.kde.org/kaccounts-integration/72fcb217e0da8eddb0c0fbcb66c805e8bbbb3e9c
Comment 7 kde 2014-12-09 10:03:47 UTC
yeah I will do that, thanks for the commit