Build the Akonadi plugin as a standalone plugin and make it optional

BUG: 341599